--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-circular-progress": "^1.3.9",
+    "react-native-otp-entry": "^1.5.0",
     "react-native-paper": "^5.12.3",
     "react-native-shadow": "^1.2.2",
     "typescript": "^5.3.0"
